# APC524

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
examples/: GCOL_example.py  disease_example.py  disease_parallel_example.py  display_3d_cgol.py  music_example.py
src/APC524/: __init__.py  solver.py  visualization.py
src/APC524/solver/: __init__.py  automaton.py  kernels.py  rules.py  utils.py
src/APC524/sonification/: sonification.py
src/APC524/visualization/: __init__.py  visualization.py  visualization_3d.py
test/: test_automaton.py  test_convolution.py  test_rules.py  test_solver.py
